# product-checker

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.json  config.py  docker-compose.yml  main.py  pyproject.toml  spec.md
.github/workflows/: docker.yml  lint.yml
